--- a/public/css/fontastic.css
+++ b/public/css/fontastic.css
@@ -3,6 +3,7 @@
 @font-face {
   font-family: "blog";
   src:url("../fonts/blog.eot");
+  src:url("../fonts/foundation-icons.svg");
   src:url("../fonts/blog.eot?#iefix") format("embedded-opentype"),
     url("../fonts/blog.woff") format("woff"),
     url("../fonts/blog.ttf") format("truetype"),
